# isabemart-be

./: .env-example  .flake8  .gitignore  README.md  db.sql  docker-compose.yml  main.py  prestart.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1493c9654cb1_added_documents.py  4586a1c2b43b_added_name_to_docs_nullable.py  4a493fcbe426_added_treatments_mant2many_services.py  515e874ef788_added_status_to_service.py  7fd1fcec98d9_initial_revision.py  80cf82d754b6_added_customer_headquarter_and_area_.py  824d847c9c0a_added_services_invoice_and_.py  a108a6356808_updated_observations_in_services.py  b6930891251e_added_sanityplan_and_controlpoints.py  bfd83a562caf_updated_notnull_service_execdate.py  d079ed54f2a9_removed_servicesarea_assoc.py  d137afbfea5a_added_servicesarea_assoc.py  d693ed86e8ef_updated_url_to_docs_nullable.py
app/api/: deps.py
app/api/api_v1/: api.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_area.py  crud_control_point.py  crud_customer.py  crud_document.py  crud_headquarter.py  crud_sanity_plan.py  crud_service.py  crud_treatments.py  crud_user.py
app/db/: base.py  init_db.py
app/models/: __init__.py  area.py  controlpoint.py  customer.py  document.py  headquarter.py  invoice.py  sanity_plan.py  service.py  treatment.py  user.py
app/models/associations/: service_treatment.py  (+1 more)
app/schemas/: __init__.py  area.py  control_point.py  customer.py  document.py  headquarter.py  invoice.py  sanity_plan.py  service.py  token.py  treatment.py  treatment_service.py  user.py  user_service.py
(+10 files in other folders)
