[tool.poetry]
name = "isanemart"
version = "0.1.0"
description = "iSanemart Server"
authors = ["Victor Manuel <victormalsx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.11.3"
fastapi = "^0.95.1"
requests = "^2.30.0"
passlib = "^1.7.4"
pydantic = "^1.10.7"
raven = "^6.10.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.12"
pytest = "^7.3.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-dotenv = "^1.0.0"
email-validator = "^2.0.0.post2"
python-multipart = "^0.0.6"
alembic = "^1.10.4"
tenacity = "^8.2.2"
fastapi-jwt-auth = "^0.5.0"

[tool.poetry.dev-dependencies]
mypy = "^1.3.0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.poetry.group.dev.dependencies]
black = "21.12b0"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
